# UV-Flash-cameras

./: .gitignore  DILATOMETER_BUILD_PLAN.md  DILATOMETER_VENDOR_QUOTE_REQUEST.md  FLASH_CAMERA_SPEC (1).md  README.md  pyproject.toml
flash_camera/: main.py
flash_camera/analysis/: __init__.py  balluffi.py  dic_backends.py  wire_silhouette.py
flash_camera/config/: camera_presets.yaml  default_config.yaml
flash_camera/core/: __init__.py  allied_vision_camera.py  basler_camera.py  camera_interface.py  camera_manager.py  dilatometer_config.py  frame_buffer.py  ipc_bus.py  optris_camera.py  quality_presets.py  recorder.py  simulated_camera.py  uvc_camera.py
flash_camera/gui/: camera_panel.py  filter_selector.py  histogram_widget.py  live_view.py  main_window.py  overlay_controls.py  quality_selector.py  recording_controls.py
flash_camera/tests/: test_camera_interface.py  test_dilatometer_analysis.py  test_recorder.py
flash_camera/utils/: export_session.py  image_utils.py  metadata.py  timestamp.py
