[project]
name = "flash-camera"
version = "0.2.0"
requires-python = ">=3.10"
description = "Dual-camera imaging system for General Flash plasma reactor"
dependencies = [
    "PyQt6>=6.5",
    "pyzmq>=25.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "tifffile>=2023.7",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
cameras = [
    "pypylon>=3.0",
    "VmbPy>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "ruff>=0.1",
]

[project.scripts]
flash-camera = "flash_camera.main:main"
export-session = "flash_camera.utils.export_session:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
